--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </nav><!-- .nav-menu -->
 
       <div class="d-block d-sm-none" style="float: right;margin-right: 50px;">
-        <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0atJXaJLHZH9DZvpuSfSBVRiNRTkakwzW7h3yH858Te9nSqRqe6fxTRZosskyVvwHl&id=100086105077219" class="facebook">
+        <a href="https://www.facebook.com/profile.php?id=100085956583720" class="facebook">
           <img src="assets/img/my/fb.png" alt="facebook" width="30" height="30">
         </a>
 
@@ -84,7 +84,7 @@
 
       </div>
       <div class="btn-getstarted scrollto d-none d-sm-block">
-        <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0atJXaJLHZH9DZvpuSfSBVRiNRTkakwzW7h3yH858Te9nSqRqe6fxTRZosskyVvwHl&id=100086105077219" class="facebook">
+        <a href="https://www.facebook.com/profile.php?id=100085956583720" class="facebook">
           <img src="assets/img/my/fb.png" alt="facebook" height="30" border="0">
         </a>
         <a href="https://lin.ee/Tk1Rlq9" class="linkedin">
@@ -407,7 +407,7 @@
             <div class="col-lg-4 info mt-4 mt-lg-0">
               <i class="ri-mail-line"></i>
               <h4>電郵:</h4>
-              <p><a class="body-l" href="mailto:first.01.sjtztw@gmail.com">first.01.sjtztw@gmail.com</a></p>
+              <p><a class="body-l" href="mailto:a185602036@gmail.com">a185602036@gmail.com</a></p>
             </div>
 
             <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -437,7 +437,7 @@
                 <br><br>
                 <strong>電郵:</strong>
                 <div>
-                  <p><a class="body-l" href="mailto:first.01.sjtztw@gmail.com">first.01.sjtztw@gmail.com</a></p><br>
+                  <p><a class="body-l" href="mailto:a185602036@gmail.com">a185602036@gmail.com</a></p><br>
                 </div>
                 <strong>服務電話:</strong>
                 <div>
@@ -446,7 +446,7 @@
               </p>
               <div class="social-links mt-3">
                 <div>
-                  <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0atJXaJLHZH9DZvpuSfSBVRiNRTkakwzW7h3yH858Te9nSqRqe6fxTRZosskyVvwHl&id=100086105077219" class="facebook">
+                  <a href="https://www.facebook.com/profile.php?id=100085956583720" class="facebook">
                     <img src="assets/img/my/fb.png" alt="facebook" height="30" border="0">
                   </a>
                 </div>
