--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="商宏投資" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/my/logo.jpg" rel="icon">
-  <link href="assets/img/my/logo.jpg" rel="apple-touch-icon">
+  <link href="assets/img/my/1.png" rel="icon">
+  <link href="assets/img/my/1.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -55,7 +55,7 @@
 
       <div class="logo mr-auto">
         <h1 class="text-light">
-          <img src="assets/img/my/logo.jpg" alt="logo">
+          <img src="assets/img/my/1.png" alt="logo">
           <a href="index.html">商宏<span>投資</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -390,8 +390,8 @@
       </div>
 
       <div class="map">
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.0542130328104!2d121.54375689999999!3d25.032234199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abd346a92ccb%3A0x86b275482e61878d!2zMTA25Y-w5YyX5biC5aSn5a6J5Y2A5b6p6IiI5Y2X6Lev5LqM5q61MjUtMjfomZ8!5e0!3m2!1szh-CN!2stw!4v1704813852656!5m2!1szh-TW!2stw" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <!--<iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.0542130328104!2d121.54375689999999!3d25.032234199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abd346a92ccb%3A0x86b275482e61878d!2zMTA25Y-w5YyX5biC5aSn5a6J5Y2A5b6p6IiI5Y2X6Lev5LqM5q61MjUtMjfomZ8!5e0!3m2!1szh-CN!2stw!4v1704813852656!5m2!1szh-TW!2stw" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.3171642758252!2d121.53456237386376!3d25.057237137358328!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a95f7dbdc3bf%3A0x1ef8daeeaeea271f!2zMTA0OTHlj7DljJfluILkuK3lsbHljLrlu7rlm73ljJfot6_kuozmrrU!5e0!3m2!1szh-CN!2stw!4v1705234156963!5m2!1szh-TW!2stw" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <div class="container">
@@ -401,7 +401,7 @@
             <div class="col-lg-4 info">
               <i class="ri-map-pin-line"></i>
               <h4>地址:</h4>
-              <p>新北市板橋區漢生東路29號</p>
+              <p>臺北市中山區建國北路2段145號11樓</p>
             </div>
 
             <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -433,7 +433,7 @@
             <div class="footer-info">
               <h3>商宏投資股份有限公司</h3>
               <p>
-                新北市板橋區漢生東路29號
+                臺北市中山區建國北路2段145號11樓
                 <br><br>
                 <strong>電郵:</strong>
                 <div>
