--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta name="google-site-verification" content="B7kzIvkB3XCK8TbN1s4tnppIo5CLYgh4SC8_JOe5oIk" />
   <title>商宏投資股份有限公司</title>
   <meta content="商宏投資股份有限公司" name="descriptison">
   <meta content="商宏投資" name="keywords">
