--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
               <p>我們深知投資市場存在各種風險，因此我們通過嚴格的風險管理和多元化的投資組合，來最大限度地保護客戶的資產。我們始終將客戶的需求和利益置於首位，通過貼心的服務和定期的投資建議，來幫助客戶實現其財務目標。</p>
             </div>
           </div>
-          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/about-list-img.jpg");'></div>
+          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/about-list-img.jpg");padding-right: 0!important;padding-left: 0!important;'>
+            <iframe height="315" style="width: 100%;" src="https://www.youtube.com/embed/bO6uawcVtzI?si=7wv95fJRJtyB6F3p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
         </div>
 
       </div>
