--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <img src="assets/img/my/fb.png" alt="facebook" width="30" height="30">
         </a>
 
-        <a href="https://lin.ee/Tk1Rlq9" class="linkedin">
+        <a href="https://line.me/ti/p/Wv1tQTJ1Dm" class="linkedin">
           <img src="assets/img/my/linka.png" width="30" height="30">
         </a>
 
@@ -87,7 +87,7 @@
         <a href="https://www.facebook.com/profile.php?id=100085956583720" class="facebook">
           <img src="assets/img/my/fb.png" alt="facebook" height="30" border="0">
         </a>
-        <a href="https://lin.ee/Tk1Rlq9" class="linkedin">
+        <a href="https://line.me/ti/p/Wv1tQTJ1Dm" class="linkedin">
           <img src="assets/img/my/zh-Hant.png" alt="加入好友" height="30" border="0">
         </a>
       </div>
@@ -453,7 +453,7 @@
                   </a>
                 </div>
                 <div>
-                  <a href="https://lin.ee/Tk1Rlq9" class="linkedin">
+                  <a href="https://line.me/ti/p/Wv1tQTJ1Dm" class="linkedin">
                     <img src="assets/img/my/zh-Hant.png" alt="加入好友" height="30" border="0">
                   </a>
                 </div>
