--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#header">主頁</a></li>
+          <li class="active"><a href="index.html#header">主頁</a></li>
+          <li><a href="other.html">商宏活動</a></li>
           <li><a href="#about">核心價值觀</a></li>
           <li><a href="#counts">經營理念</a></li>
           <li><a href="#services">卓越優勢</a></li>
