--- a/other2.html
+++ b/other2.html
@@ -104,8 +104,12 @@
             <div class="filter-card item clearfix">
               <div class="thumb"><img src="./assets/img/lottery/now1.png"></div>
               <div class="con-r">
-                <div class="title"><span class="status offline d-none d-sm-block">進行中</span>
-                  <span class="status-mobile offline d-block d-sm-none">進行中</span>龍騰四海鬧新春，幸福快樂遍天真</div>
+                <div class="title">
+                  <span class="status offline d-none d-sm-block">進行中</span>
+                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status offline d-none d-sm-block" style="right: 16rem;">点击参与</span></a>
+                  <span class="status-mobile offline d-block d-sm-none">進行中</span>
+                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status-mobile offline d-block d-sm-none" style="left: 6rem;right: 11rem;">点击参与</span></a>
+                  龍騰四海鬧新春，幸福快樂遍天真</div>
                 <span class="time d-none d-sm-block">長期有效</span>
                 <span class="time-mobile d-block d-sm-none">長期有效</span>
                 <div class="desc">我們相信，通過您的推薦，更多的人將會了解和使用商宏集團的產品和服務，同時您也能夠獲得豐厚的獎勵。讓我們攜手共進，一起掘金之路，友福同享！</div>
