--- a/other2.html
+++ b/other2.html
@@ -106,9 +106,9 @@
               <div class="con-r">
                 <div class="title">
                   <span class="status offline d-none d-sm-block">進行中</span>
-                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status offline d-none d-sm-block" style="right: 16rem;">点击参与</span></a>
+                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status offline d-none d-sm-block" style="right: 16rem;">點擊參與</span></a>
                   <span class="status-mobile offline d-block d-sm-none">進行中</span>
-                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status-mobile offline d-block d-sm-none" style="left: 6rem;right: 11rem;">点击参与</span></a>
+                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status-mobile offline d-block d-sm-none" style="left: 6rem;right: 11rem;">點擊參與</span></a>
                   龍騰四海鬧新春，幸福快樂遍天真</div>
                 <span class="time d-none d-sm-block">長期有效</span>
                 <span class="time-mobile d-block d-sm-none">長期有效</span>
