--- a/other.html
+++ b/other.html
@@ -153,9 +153,11 @@
               <div class="con-r">
                 <div class="title"><span class="status offline d-none d-sm-block">已下線</span>
                   <span class="status-mobile offline d-block d-sm-none">已下線</span>“盒禮”一起過“金”秋！</div>
-                <span class="time d-none d-sm-block">2021年09月06日-2021年10月15日</span>
-                <span class="time-mobile d-block d-sm-none">2021年09月06日-2021年10月15日</span>
-                <div class="desc">商宏集團“盒禮”一起過金秋，黃金好禮送不停！又是一年團圓時，為感謝新老客戶的信任與支持，商宏于2021年9月6日至10月15日推出中秋回饋活動，豐厚的獎勵等您來領，更有機會抽到1kg金條！</div>
+                <span class="time d-none d-sm-block">2023年09月06日-2023年10月15日</span>
+                <span class="time-mobile d-block d-sm-none">2023年09月06日-2023年10月15日</span>
+                <div class="desc">商宏集團“盒禮”一起過金秋，黃金好禮送不停！又是一年團圓時，為感謝新老客戶的信任與支持，
+                  商宏于2023年9月6日至10月15日推出中秋回饋活動，豐厚的獎勵等您來領，更有機會抽到1kg金條！
+                </div>
               </div>
             </div>
             <div class="filter-app item clearfix">
@@ -165,9 +167,9 @@
                   <span class="status offline d-none d-sm-block">已下線</span>
                   <span class="status-mobile offline d-block d-sm-none">已下線</span>
                   七載同行，百萬感恩</div>
-                <span class="time d-none d-sm-block">2021年05月03日-2021年07月30日</span>
-                <span class="time-mobile d-block d-sm-none">2021年05月03日-2021年07月30日</span>
-                <div class="desc">商宏集團七周年慶典來臨！為感謝新老顧客對商宏一直以來的支持，2021年5月3日至7月30日期間商宏重磅推出“七載同行，百萬感恩”活動，豐厚贈金獎勵邀請您來領取！活動期間注冊的新用戶，更能獨享新客福利。攜友同行，獎勵更多！</div>
+                <span class="time d-none d-sm-block">2022年05月03日-2022年07月30日</span>
+                <span class="time-mobile d-block d-sm-none">2022年05月03日-2022年07月30日</span>
+                <div class="desc">商宏集團七周年慶典來臨！為感謝新老顧客對商宏一直以來的支持，2022年5月3日至7月30日期間商宏重磅推出“七載同行，百萬感恩”活動，豐厚贈金獎勵邀請您來領取！活動期間注冊的新用戶，更能獨享新客福利。攜友同行，獎勵更多！</div>
               </div>
             </div>
             <div class="filter-app item clearfix">
