--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
             </div>
           </div>
           <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/about-list-img.jpg");padding-right: 0!important;padding-left: 0!important;'>
-            <iframe height="315" style="width: 100%;" src="https://www.youtube.com/embed/bO6uawcVtzI?si=7wv95fJRJtyB6F3p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!--<iframe height="315" style="width: 100%;" src="https://www.youtube.com/embed/bO6uawcVtzI?si=7wv95fJRJtyB6F3p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
+            <iframe height="315" style="width: 100%;" src="https://www.youtube.com/embed/bO6uawcVtzI?si=RgdIHDt5BsabNzEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
 
