--- a/other2.html
+++ b/other2.html
@@ -113,6 +113,16 @@
                 <span class="time d-none d-sm-block">活動時間：2024/01/29-04/01</span>
                 <span class="time-mobile d-block d-sm-none">活動時間：2024/01/29-04/01</span>
                 <div class="desc">我們相信，通過您的推薦，更多的人將會了解和使用商宏集團的產品和服務，同時您也能夠獲得豐厚的獎勵。讓我們攜手共進，一起掘金之路，友福同享！</div>
+                <div class="desc-pc d-none d-sm-block">【獎項及名額】<br/>
+                  頭獎：東京雙人7日遊包來回機票 - 旅遊折抵金（價值100,000元）3名<br/>
+                  貳獎：iPhone 15 Pro Max 256G手機1台（市價44,900元）5名<br/>
+                  參獎：NeoChef智慧變頻微波爐一台（市價20,000元）10名<br/>
+                  肆獎：Whirlpool惠而浦吸塵器一台（市價5,000元）20名<br/>
+                  伍獎：瑞龍呈祥專屬定制保溫杯（價值1000元）500名<br/>
+                  陸獎：祥龍瑞氣7-11超商卡（價值500元）800名<br/>
+                  柒獎：喜氣洋洋招福紅包一個（價值300元）1000名
+                  捌獎：迎春金龍投資書籍一冊（價值200元）2000<br/>
+                  願龍年帶給你無盡的好運和成功！一切順利！</div>
               </div>
             </div>
             </a>
