--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
 
         <div class="text-center title">
-          <p> 秉承價值創造和拓展，與投資夥伴之間建立互利互信的夥伴關繫<br>追求可持續髮展，從細節做起，儘職自律，不以高風險爲目標，髮現機會並積極創新。</p>
+          <p> 秉承價值創造和拓展，與投資夥伴之間建立互利互信的夥伴關係<br>追求可持續發展，從細節做起，儘職自律，不以高風險爲目標，髮現機會並積極創新。</p>
         </div>
 
       </div>
@@ -277,7 +277,7 @@
             <div class="icon-box">
               <i class="icofont-tasks-alt"></i>
               <h4><a>良好的聲譽</a></h4>
-              <p>我們致力於不斷求知進取和追求卓越是公司成功和髮展壯大的內驅力。我們努力構建學習型企業，激勵每一位員工積極汲取新知識、奉行最佳實踐，不斷提昇自我、鑄造輝煌。</p>
+              <p>我們致力於不斷求知進取和追求卓越是公司成功和髮展壯大的內驅力。我們努力構建學習型企業，激勵每一位員工努力學習新知識、奉行最佳實踐，不斷提升自我、鑄造輝煌。</p>
             </div>
           </div>
         </div>
