--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 
         <div class="text-center title">
           <h3>經營理念</h3>
-          <p>我們的核心理念在於“提供增值，創造價值”，根據宏觀形勢和行業變革的趨勢，調整投資策略<br>追求與投資夥伴和被投資企業之間的深化合作、互相促進，助推和引領行業髮展。</p>
+          <p>我們的核心理念在於“提供增值，創造價值”，根據宏觀形勢和行業變革的趨勢，調整投資策略<br>追求與投資夥伴和被投資企業之間的深化合作、互相促進，助推和引領行業發展。</p>
         </div>
 
         <div class="text-center title">
-          <p> 秉承價值創造和拓展，與投資夥伴之間建立互利互信的夥伴關係<br>追求可持續發展，從細節做起，儘職自律，不以高風險爲目標，髮現機會並積極創新。</p>
+          <p> 秉承價值創造和拓展，與投資夥伴之間建立互利互信的夥伴關係<br>追求可持續發展，從細節做起，盡職自律，不以高風險爲目標，發現機會並積極創新。</p>
         </div>
 
       </div>
