--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="icon-box">
               <i class="icofont-computer"></i>
               <h4><a>專業團隊</a></h4>
-              <p>公司擁有一支高度專業的團隊，包括投資專家、分析師和交易員。具有豐富的經驗和深入的市場洞察力，準確地評估投資機會和風險<br>制定出有效的投資策略，並在市場上實現優異的投資回報。</p>
+              <p>公司擁有一支高度專業的團隊，包括投資專家、分析師和交易員。具有豐富的經驗和深入的市場洞察力，準確的評估投資機會和風險<br>制定出有效的投資策略，並在市場上實現優異的投資回報。</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
