--- a/other2.html
+++ b/other2.html
@@ -100,15 +100,15 @@
 
         <div class="row">
           <div class="main-list activity">
-            <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050">
+            <a href="https://lotterybaby.tw?code=83d78034c9fe4b1cbc733d480ea72050">
             <div class="filter-card item clearfix">
               <div class="thumb"><img src="./assets/img/lottery/now1.png"></div>
               <div class="con-r">
                 <div class="title">
                   <span class="status offline d-none d-sm-block">進行中</span>
-                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status offline d-none d-sm-block" style="right: 16rem;">點擊參與</span></a>
+                  <a href="https://lotterybaby.tw?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status offline d-none d-sm-block" style="right: 16rem;">點擊參與</span></a>
                   <span class="status-mobile offline d-block d-sm-none">進行中</span>
-                  <a href="http://139.180.213.111?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status-mobile offline d-block d-sm-none" style="left: 6rem;right: 11rem;">點擊參與</span></a>
+                  <a href="https://lotterybaby.tw?code=83d78034c9fe4b1cbc733d480ea72050"><span class="status-mobile offline d-block d-sm-none" style="left: 6rem;right: 11rem;">點擊參與</span></a>
                   龍騰四海鬧新春，幸福快樂遍天真</div>
                 <span class="time d-none d-sm-block">活動時間：2024/01/29-04/01</span>
                 <span class="time-mobile d-block d-sm-none">活動時間：2024/01/29-04/01</span>
